# Translite

./: .clang-format  CMakeLists.txt  Main.qml  README.md
Src/: data.h  main.cpp  translate.cpp  translate.h
